fix(Objectives): visibility form is not fully visible
(cherry picked from commit 1d0ef60)

--- a/markup/assets/css/main.css
+++ b/markup/assets/css/main.css
@@ -6998,7 +6998,7 @@ ul.newSelectList .miniStylePagination {
   line-height: 20px;
 }
 .objectivesDescValue {
-  height: 105px;
+  /*height: 105px;*/
   overflow: hidden;
 }
 .afterTextBlock {
